k8s/app/example-api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-api-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: example-api  # 👈 this is the key label
  ports:
    - protocol: TCP
      port: 80          # external service port
      targetPort: 80    # your app container's port
      nodePort: 30080   # the port you'll use in browser: http://<IP>:30080
