k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-api-service
  labels:
    app: example-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: example-api
